Fix carousel overflow issue.

--- a/sass/ppc.scss
+++ b/sass/ppc.scss
@@ -59,6 +59,7 @@ $grid-gutter-width: 32px;
 
 html {
     font-size: 14px;
+    overflow-x: hidden;
 }
 
 body {
@@ -172,7 +173,6 @@ h3 {
         position: relative;
         z-index: 1;
         .ratio-box {
-            box-shadow: 0 1rem 3rem rgba(0,0,0,.175);
             border-radius: 0 4px 4px 0;
         }
         &::after {
@@ -190,7 +190,6 @@ h3 {
         @media (max-width: 1199.98px) {
             max-width: 100vw;
             .ratio-box {
-                box-shadow: none;
                 border-radius: 0;
             }
             &::after {
@@ -273,7 +272,7 @@ h3 {
 
 .hero-carousel {
     .owl-stage-outer {
-        overflow-x: visible;
+        overflow-x: hidden;
         @media (max-width: 575.98px) {
             background: linear-gradient(270deg, #0F75BC 0%, #083B5E 50%);
         }
